mpdparser: added support for parsing fraction of seconds in dateTime fields

https://bugzilla.gnome.org/show_bug.cgi?id=758410